Fix huge gap between pages and footer

--- a/_sass/layout/_footer.scss
+++ b/_sass/layout/_footer.scss
@@ -14,8 +14,8 @@
   clear: both;
 
   /* sticky footer fix start */
-  position: absolute;
-  bottom: 0em;
+  position: relative; // changed from absolute to relative
+  bottom: auto; // reset bottom
   height: auto;
   /* sticky footer fix end */
 
